--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
-                    ./jenkins/build/mvnbuild.bash mvn -B -DskipTests clean package
+                    ./simple-java-maven-app/jenkins/build/mvnbuild.bash mvn -B -DskipTests clean package
                 '''
             }
 
@@ -19,7 +19,7 @@ pipeline {
 
     stage('Test') {
             steps {
-                sh './jenkins/test/mvntest.bash mvn test'
+                sh './simple-java-maven-app/jenkins/test/mvntest.bash mvn test'
             }
 
         }
