--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,11 +33,12 @@ pipeline {
         PROJECT_NAME = "opstree"
       }
       steps {
-        withSonarQubeEnv(installationName: 'sonarqube', credentialsId: 'sonarqube') {
+        withSonarQubeEnv('sonarqube') {
             sh '''$SCANNER_HOME/bin/sonar-scanner -Dsonar.organization=$ORGANIZATION \
             -Dsonar.java.binaries=build/classes/java/ \
             -Dsonar.projectKey=$PROJECT_NAME \
-            -Dsonar.sources=.'''
+            -Dsonar.sources=/home/deepak/jenkins/jenkins_data/jenkins_home/workspace/CI-pipe/simple-java-maven-app/target/*.jar
+			'''
         }
       }
     }
