--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,8 @@ pipeline {
       }
       steps {
         withSonarQubeEnv('sonarqube') {
-            sh '''$SCANNER_HOME/bin/sonar-scanner -Dsonar.organization=$ORGANIZATION \
+            sh '''$SCANNER_HOME
+			-Dsonar.organization=$ORGANIZATION \
 			-Dsonar.projectName=opstree
             -Dsonar.java.binaries=build/classes/java/ \
             -Dsonar.projectKey=$PROJECT_NAME \
