--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,22 +26,19 @@ pipeline {
         }
 
     stage('sonarqube') {
-      environment {
+	
+	environment {
         SCANNER_HOME = "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux"
         SONAR_TOKEN = credentials('sonarqube')
         ORGANIZATION = "opstree"
         PROJECT_NAME = "opstree"
       }
-      steps {
-        withSonarQubeEnv('sonarqube_server') {
-            sh '''$SCANNER_HOME
-			-Dsonar.organization=$ORGANIZATION \
-			-Dsonar.projectName=opstree
-            -Dsonar.java.binaries=build/classes/java/ \
-            -Dsonar.projectKey=$PROJECT_NAME \
-            -Dsonar.sources=/home/deepak/jenkins/jenkins_data/jenkins_home/workspace/CI-pipe/simple-java-maven-app/target/*.jar
-			'''
-        }
+	   steps {
+                def scannerHome = tool 'sonarqube'
+                withSonarQubeEnv('sonarqube_server') {
+                    sh "${scannerHome}/bin/sonar-scanner"
+                }
+      
       }
     }
 
