--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,12 +25,13 @@ pipeline {
 
         }
 
-    stage("build & SonarQube analysis") {
-            agent any
-            steps {
-              withSonarQubeEnv('sonarqube_server') {
-                sh 'mvn clean package sonar:sonar'
-              }
+    stage('Sonarqube') {
+    environment {
+        scannerHome = tool 'sonarqube_scanner'
+    }    steps {
+        withSonarQubeEnv('sonarqube_server') {
+            sh "${scannerHome}/bin/sonar-scanner"
+        
             }
           
       
