--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,8 @@ pipeline {
     stage('Sonarqube') {
     environment {
         scannerHome = tool 'sonarqube_scanner'
-    }    steps {
+    }    
+	steps {
         withSonarQubeEnv('sonarqube_server') {
             sh "${scannerHome}/bin/sonar-scanner"
         
@@ -36,6 +37,7 @@ pipeline {
           
       
       }
+	  }
     
 
     stage("Quality Gate") {
