--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,19 +25,14 @@ pipeline {
 
         }
 
-    stage('Sonarqube') {
-    environment {
-        scannerHome = tool 'sonarqube_scanner'
-    }    
-	steps {
-        withSonarQubeEnv('sonarqube_server') {
-            sh "${scannerHome}/bin/sonar-scanner"
-        
-            }
+    
+   stage('SonarQube Analysis') {
+        sh "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner -Dsonar.host.url=http://192.168.0.110:9000 -Dsonar.projectName=opstree -Dsonar.projectVersion=1.0 -Dsonar.projectKey=opstree -Dsonar.sources=. -Dsonar.projectBaseDir=/var/jenkins_home/workspace/CI-pipe/simple-java-maven-app"
+    }
           
       
-      }
-	  }
+      
+
     
 
     stage("Quality Gate") {
