--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,10 +27,11 @@ pipeline {
 
     
    stage('SonarQube Analysis') {
+       steps {
         sh "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner -Dsonar.host.url=http://192.168.0.110:9000 -Dsonar.projectName=opstree -Dsonar.projectVersion=1.0 -Dsonar.projectKey=opstree -Dsonar.sources=. -Dsonar.projectBaseDir=/var/jenkins_home/workspace/CI-pipe/simple-java-maven-app"
     }
           
-      
+     } 
       
 
     
