--- a/jenkinsfile
+++ b/jenkinsfile
@@ -36,13 +36,14 @@ pipeline {
 
     
 
-    stage("Quality Gate") {
-      steps {
-        timeout(time: 1, unit: 'MINUTES') {
+    steps {
+        withSonarQubeEnv('sonarqube_server') {
+            sh "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner"
+        }        timeout(time: 1, unit: 'MINUTES') {
             waitForQualityGate abortPipeline: true
         }
-      }
     }
+}
 
   }
   
