--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,9 +33,7 @@ pipeline {
           
      } 
       
-
-    
-
+   stage('SonarQube Analysis') {
     steps {
         withSonarQubeEnv('sonarqube_server') {
             sh "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner"
@@ -43,7 +41,7 @@ pipeline {
             waitForQualityGate abortPipeline: true
         }
     }
-
+}
 
   }
   
