--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,16 +30,20 @@ pipeline {
        steps {
         sh "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner -Dsonar.host.url=http://192.168.0.110:9000 -Dsonar.projectName=opstree -Dsonar.projectVersion=1.0 -Dsonar.projectKey=opstree -Dsonar.sources=. -Dsonar.projectBaseDir=/var/jenkins_home/workspace/CI-pipe/simple-java-maven-app"
     }
-               
-   
-    stage("Quality Gate") {
-      steps {
-        timeout(time: 1, unit: 'MINUTES') {
-            waitForQualityGate abortPipeline: true
-        }
-      }
-    }
+          
+     } 
+      
 
-  }
+    
+
+    steps {
+        withSonarQubeEnv('sonarqube_server') {
+            sh "/var/jenkins_home/sonar-scanner/sonar-scanner-3.3.0.1492-linux/bin/sonar-scanner"
+        }        timeout(time: 1, unit: 'MINUTES') {
+            waitForQualityGate abortPipeline: false
+        }
+    }
   
+}
+
 }
