--- a/simple-java-maven-app/pom.xml
+++ b/simple-java-maven-app/pom.xml
@@ -22,12 +22,22 @@
             <name>opstree</name>
             <url>http://192.168.0.110:8081/repository/opstree/</url>
         </repository>
-        <snapshotRepository>
-            <id>deployment</id>
-            <name>opstree</name>
-            <url>http://192.168.0.110:8081/repository/opstree/</url>
-        </snapshotRepository>
     </distributionManagement>
+	
+	<plugin>
+   <artifactId>maven-deploy-plugin</artifactId>
+   <version>2.8.1</version>
+   <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+  </plugin>
+
     <plugins>
       <plugin>
         <!-- Build an executable JAR -->
