--- a/simple-java-maven-app/pom.xml
+++ b/simple-java-maven-app/pom.xml
@@ -21,6 +21,10 @@
 		    <id>nexus</id>
 		    <url>http://192.168.0.110:8081/repository/opstree/</url>
 		 </snapshotRepository>
+		 <Repository>
+		    <id>nexus</id>
+		    <url>http://192.168.0.110:8081/repository/opstree/</url>
+		 </Repository>
   	</distributionManagement>
   
   
