--- a/simple-java-maven-app/pom.xml
+++ b/simple-java-maven-app/pom.xml
@@ -32,12 +32,9 @@
   
   <build>
   <plugins>
-      <plugin>
-        <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
-        <configuration>
+     <plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <configuration>
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
@@ -46,7 +43,9 @@
             </manifest>
           </archive>
         </configuration>
-      </plugin>
+        
+</plugin>
+      
 	  <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
