--- a/simple-java-maven-app/pom.xml
+++ b/simple-java-maven-app/pom.xml
@@ -28,7 +28,10 @@
             <url>http://192.168.0.110:8081/repository/com/</url>
         </repository>
   	</distributionManagement>
-  
+  <properties>
+         <sonar.analysis.mode>preview</sonar.analysis.mode>
+         <sonar.issuesReport.html.enable>true</sonar.issuesReport.html.enable>
+    </properties>
   
   <build>
   <plugins>
