--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
           
      } 
 	
-    stage('deploy') {
+    stage('deploy to nexus') {
             steps {
                 sh ' bash ./simple-java-maven-app/jenkins/test/mvndeploy.bash mvn deploy -Dbuild.number=$BUILD_NUMBER'
             }
